--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume (3).pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
