--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG-20250402-WA0003.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>VIGNESH N</h1>
             <p>Am STUDENT</p>
         </div>
